force-app/main/default/objects/Promocion_Comercial_API__c/Promocion_Comercial_API__c.object-meta.xml
<CustomObject>
    <label>Promocion_Comercial API</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Promocion/ Comercial API Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promociones_Comerciales API</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>