force-app/main/default/objects/Promocion_Comercial_API__c/fields/Numero_de_Leads_convertidos__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Leads_convertidos__c</fullName>
    <label>Número de Leads convertidos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>