force-app/main/default/objects/Promocion_Comercial_API__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promocion</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Promociones_comercial API</relationshipLabel>
    <relationshipName>Promociones_comercial_API</relationshipName>
    <type>Lookup</type>
</CustomField>